--- a/api/package.json
+++ b/api/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "scripts": {
     "start": "npx nodemon",
+    "dev": "nodemon",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
